--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-graphql": "^0.7.1",
     "graphql": "^14.0.2",
     "jsonwebtoken": "^8.4.0",
-    "mongoose": "^5.3.15"
+    "mongoose": "^5.3.15",
+    "stripe": "^11.13.0"
   }
 }
